fix/home/align/columns/

--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -6,6 +6,8 @@
      position: fixed
      display: flex
      flex-direction: column
+     align-items: center
+
 
 .logo
   width: 100%
@@ -57,6 +59,7 @@ a
     left: auto
     flex-direction: row
     align-items: center
+    justify-content: center
 
   .text
     padding-top: 15px
@@ -98,6 +101,7 @@ a
     left: auto
     flex-direction: row
     align-items: center
+    justify-content: center
 
   // .logo
   //   background:
