--- a/assets/css/3-layouts/home.sass
+++ b/assets/css/3-layouts/home.sass
@@ -34,6 +34,8 @@ body
 @media (max-width: 640px)
   .home-sections .flex
     display: flex
+    align-items: center
+    justify-content: center
 
   .col-1
     max-width: 100%
@@ -44,10 +46,6 @@ body
 
   #toggle
     margin-left: 8%
-
-
-
-
 
   img
     padding-left: 8%
@@ -141,6 +139,8 @@ h1
   .home-sections
     .flex
       margin-left: 0%
+      align-items: center
+      justify-content: center
 
   #my_screen
     margin-left: 8%
